# ChessDex-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.devcontainer/: devcontainer.json
Testing/: CMakeLists.txt  test.cpp  test_board.cpp  test_common.cpp  test_engine.cpp  test_move.cpp  test_piece.cpp
src/: common.cpp  common.h  main.cpp
src/board/: board.cpp  board.h  move.cpp  move.h  piece.cpp  piece.h
